--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,9 @@ textarea.form-control {
   }
 }
 /* / experiencia */
+.experiencia {
+  margin-bottom: 10px;
+}
 .logo-experiencia{
   max-height: 100px;
   padding-bottom: 5px;
